[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Adit Sachde <git@aditsachde.com>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface the I3G4250D (gyroscope)"
documentation = "https://docs.rs/i3g4250d"
keywords = ["embedded-hal-driver", "gyroscope", "MEMS"]
license = "MIT OR Apache-2.0"
name = "i3g4250d"
repository = "https://github.com/aditsachde/i3g4250d"
version = "0.3.0"

[dependencies]
embedded-hal = "0.2.4"
